crates/flowscope-core/tests/snapshots/snapshots__run_snowflake_snapshot_test@snowflake_higher_order_functions.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "nodes": [
    {
      "id": "column_0242ab25280ed5a7",
      "type": "column",
      "label": "SAMPLE_TRANSFORM",
      "canonicalName": {
        "name": "SAMPLE_TRANSFORM"
      },
      "statementIds": [
        0
      ],
      "expression": "TRANSFORM(ident, j -> j:value)"
    },
    {
      "id": "column_0eb4bfba8b855e73",
      "type": "column",
      "label": "ident",
      "qualifiedName": "REF.ident",
      "canonicalName": {
        "schema": "REF",
        "name": "ident"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_74231d2bb410f137",
      "type": "column",
      "label": "SAMPLE_FILTER",
      "canonicalName": {
        "name": "SAMPLE_FILTER"
      },
      "statementIds": [
        0
      ],
      "expression": "FILTER(ident, i -> i:value > 0)"
    },
    {
      "id": "column_bc47eed30ded4c86",
      "type": "column",
      "label": "i",
      "qualifiedName": "REF.i",
      "canonicalName": {
        "schema": "REF",
        "name": "i"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "column_c8070d839a9a57ea",
      "type": "column",
      "label": "j",
      "qualifiedName": "REF.j",
      "canonicalName": {
        "schema": "REF",
        "name": "j"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_59882a72c0b4f1ff",
      "type": "table",
      "label": "REF",
      "qualifiedName": "REF",
      "canonicalName": {
        "name": "REF"
      },
      "statementIds": [
        0
      ]
    }
  ],
  "edges": [
    {
      "id": "edge_18fd336d44accd7a",
      "from": "table_59882a72c0b4f1ff",
      "to": "column_c8070d839a9a57ea",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_2451cbef021e883f",
      "from": "table_59882a72c0b4f1ff",
      "to": "column_0eb4bfba8b855e73",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_291fb20f94489d52",
      "from": "column_c8070d839a9a57ea",
      "to": "column_0242ab25280ed5a7",
      "type": "derivation",
      "expression": "TRANSFORM(ident, j -> j:value)",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_8a12f7d809bcf02f",
      "from": "output_74d22f755ec62dbc",
      "to": "column_0242ab25280ed5a7",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_a8a4dda9847e0899",
      "from": "table_59882a72c0b4f1ff",
      "to": "column_bc47eed30ded4c86",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_b9b766fd191ea29a",
      "from": "output_74d22f755ec62dbc",
      "to": "column_74231d2bb410f137",
      "type": "ownership",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_bfe33c84f051112e",
      "from": "column_bc47eed30ded4c86",
      "to": "column_74231d2bb410f137",
      "type": "derivation",
      "expression": "FILTER(ident, i -> i:value > 0)",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_d2c1fb6855e9cfe8",
      "from": "column_0eb4bfba8b855e73",
      "to": "column_74231d2bb410f137",
      "type": "derivation",
      "expression": "FILTER(ident, i -> i:value > 0)",
      "statementIds": [
        0
      ]
    },
    {
      "id": "edge_ed565322a4c9fc7c",
      "from": "column_0eb4bfba8b855e73",
      "to": "column_0242ab25280ed5a7",
      "type": "derivation",
      "expression": "TRANSFORM(ident, j -> j:value)",
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 5,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
