crates/flowscope-core/tests/snapshots/snapshots__run_snowflake_snapshot_test@snowflake_time_travel.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "nodes": [
    {
      "id": "output_74d22f755ec62dbc",
      "type": "output",
      "label": "Output",
      "canonicalName": {
        "name": "Output"
      },
      "statementIds": [
        0
      ]
    },
    {
      "id": "table_dbbf4e60ff101c21",
      "type": "table",
      "label": "MY_TABLE",
      "qualifiedName": "MY_TABLE",
      "canonicalName": {
        "name": "MY_TABLE"
      },
      "statementIds": [
        0
      ],
      "metadata": {
        "occurrenceSourceNames": [
          null
        ],
        "occurrenceSpans": [
          {
            "start": 52,
            "end": 60
          }
        ],
        "occurrenceStatementIds": [
          0
        ]
      }
    }
  ],
  "edges": [
    {
      "id": "edge_c9c727d7c9ffdda3",
      "from": "table_dbbf4e60ff101c21",
      "to": "output_74d22f755ec62dbc",
      "type": "data_flow",
      "approximate": true,
      "statementIds": [
        0
      ]
    }
  ],
  "issues": [
    {
      "severity": "info",
      "code": "APPROXIMATE_LINEAGE",
      "message": "SELECT * from 'MY_TABLE' - column list unknown without schema metadata",
      "statementIndex": 0
    }
  ],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 0,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 1
    },
    "hasErrors": false
  }
}
